5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1758_1183.log
== TEST (2019-05-29 23:33:13) 
-- CODE:
from numpy import *

v = array(eval(input("vetor: ")))

i= 0
cont = 0

while(i < size(v)):
	if(v[i] < 0):
	x	=del.[i]
	print(x)
-- ERROR:
File "XXXX", line 10
    x	=del.[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:33:51) 
-- CODE:
from numpy import *

v = array(eval(input("vetor: ")))

i= 0
cont = 0

while(i < size(v)):
	if(v[i] < 0):
	cont	= del.[i]
	print(cont)
-- ERROR:
File "XXXX", line 10
    cont	= del.[i]
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:34:09) 
-- CODE:
from numpy import *

v = array(eval(input("vetor: ")))

i= 0
cont = 0

while(i < size(v)):
	if(v[i] < 0):
	cont= del.[i]
	print(cont)
-- ERROR:
File "XXXX", line 10
    cont= del.[i]
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:34:24) 
-- CODE:
from numpy import *

v = array(eval(input("vetor: ")))

i= 0
cont = 0

while(i < size(v)):
	if(v[i] < 0):
	cont=cont + del.[i]
	print(cont)
-- ERROR:
File "XXXX", line 10
    cont=cont + del.[i]
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:34:37) 
-- CODE:
from numpy import *

v = array(eval(input("vetor: ")))

i= 0
cont = 0

while(i < size(v)):
	if(v[i] < 0):
		cont=cont + del.[i]
	print(cont)
-- ERROR:
File "XXXX", line 10
    cont=cont + del.[i]
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:38:51) 
-- CODE:
from numpy import *

v = array(eval(input("vetor: ")))

i= 0
new = 0

while(i < size(v)):
	if(v[i] < 0):
		new=new + s.replace(v)
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:39:16) 
-- CODE:
from numpy import *

v = array(eval(input("vetor: ")))

i= 0
new = 0

while(i < size(v)):
	if(v[i] < 0):
		new=new + s.replace(v)
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:39:34) 
-- CODE:
from numpy import *

v = array(eval(input("vetor: ")))

i= 0
new = 0

while(i < size(v)):
	if(v[i] < 0):
		new=new + s.replace(v)
	print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:39:57) 
-- CODE:
from numpy import *

v = array(eval(input("vetor: ")))

i= 0
new = 0

while(i < size(v)):
	if(v[i] < 0):
		new=new + s.replace(v)
	print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:39:57) 
-- CODE:
from numpy import *

v = array(eval(input("vetor: ")))

i= 0
new = 0

while(i < size(v)):
	if(v[i] < 0):
		new=new + s.replace(v)
	print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:40:16) 
-- CODE:
from numpy import *

v = array(eval(input("vetor: ")))

i= 0
new = 0

while(i < size(v)):
	if(v[i] < 0):
		new=new + s.replace(v)
	print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:40:16) 
-- CODE:
from numpy import *

v = array(eval(input("vetor: ")))

i= 0
new = 0

while(i < size(v)):
	if(v[i] < 0):
		new=new + s.replace(v)
	print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:40:17) 
-- CODE:
from numpy import *

v = array(eval(input("vetor: ")))

i= 0
new = 0

while(i < size(v)):
	if(v[i] < 0):
		new=new + s.replace(v)
	print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:40:17) 
-- CODE:
from numpy import *

v = array(eval(input("vetor: ")))

i= 0
new = 0

while(i < size(v)):
	if(v[i] < 0):
		new=new + s.replace(v)
	print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:29:01) 
-- CODE:
from numpy import *

v = array(eval(input("vetor: ")))

i= 0
new = 0

while(i < size(v)):
	if(v[i] >= 0):
		new = new + 1
	i = i + 1
	
k = 0
l = 0

v2 = zeros(new, dtype = int)

while(k < size(v)):
	if(v[k] >= 0):
		v2[l] = v[k]
		l = l + 1
	k = k + 1
print(v2)



-- EXECUTION TIME:
0.61405
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
